test/functions/operatorOverloads/operatorMethods/nestedMethodBad.good
nestedMethodBad.chpl:14: In function 'main':
nestedMethodBad.chpl:19: error: unresolved call '+(R, R)'
$CHPL_HOME/modules/internal/String.chpl:nnnn: note: this candidate did not match: +(x: bufferType, y: byteIndex)
nestedMethodBad.chpl:19: note: because actual argument #1 with type 'R'
$CHPL_HOME/modules/internal/String.chpl:nnnn: note: is passed to formal 'x: c_ptr(uint(8))'
nestedMethodBad.chpl:19: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   +(a: int(8), b: int(8))
$CHPL_HOME/modules/internal/ChapelBase.chpl:nnnn: note:   +(a: int(16), b: int(16))
note: and nnnn other candidates, use --print-all-candidates to see them
